--- a/BCX_Wallet/library_base/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="module_asset_download_failed">下载失败！</string>
     <string name="operate_failed">操作失败</string>
     <string name="secret_free_tip">退出DApp前不用再次确认</string>
+    <string name="not_upgrade_text">暂不更新</string>
 </resources>
