--- a/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
     <string name="module_asset_transfer_token">Send</string>
     <string name="module_asset_receivables_token">Receive</string>
-    <string name="module_asset_props_assets">Sources</string>
+    <string name="module_asset_props_assets">Resources</string>
     <string name="module_asset_message_center">Vote</string>
     <string name="module_asset_owner_assets_text">My Assets</string>
     <string name="module_asset_transfer_title">Send</string>
