fix (string.xml)  add node connect status tips

--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -15,4 +15,5 @@
     <string name="deal_detail">Deal Detail</string>
     <string name="next_text">Next</string>
     <string name="insufficient_balance">Insufficient balance</string>
+    <string name="module_mine_node_connect_failed">Node connect failed</string>
 </resources>
