--- a/BCX_Wallet/module_mine/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/strings.xml
@@ -142,5 +142,9 @@
     <string name="module_mine_nh_receiver_can_not_be_self">资产接收方不能是自己</string>
     <string name="module_mine_nh_asset_sale_valid_time_max">最大 </string>
     <string name="order_manage_text">订单管理</string>
+    <string name="module_mine_set_password">设置密码</string>
+    <string name="module_mine_reset_confirm_password">确认密码</string>
+    <string name="module_mine_confirm_password_empty">确认密码</string>
+    <string name="module_mine_reset_password_success">重置成功</string>
 
 </resources>
