--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
     <string name="reset_password_title">重置密码</string>
     <string name="module_login_private_key_hint">请输入明文私钥</string>
     <string name="module_login_password_confirm_failure">前后密码设置不一致，请重新设置</string>
+    <string name="register_needs_title">免费账户需任意满足以下条件之一：</string>
+    <string name="register_needs_text_one">1. 含有数字0～9</string>
+    <string name="register_needs_text_two">2. 含有特殊字符-</string>
+    <string name="register_needs_text_three">3. 不含有a，e，i，o，u，y字母的</string>
 </resources>
