--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -47,10 +47,12 @@
     <string name="fragment_mine_coin_type_select">币种选择</string>
     <string name="module_mine_frozen_text">冻结 </string>
     <string name="module_mine_old_password">当前密码</string>
+    <string name="module_asset_total_assets">总资产</string>
     <string name="module_mine_new_password">新密码</string>
     <string name="module_mine_reset_confirm_password">确认密码</string>
     <string name="module_mine_input_old_password">请输入当前密码</string>
     <string name="module_mine_input_new_password">请输入新密码</string>
     <string name="module_mine_confirm_password">请再次确认新密码</string>
     <string name="module_mine_reset_failed">重置失败</string>
+    <string name="module_login_private_key_no_account_info">该私钥没有对应的账户信息</string>
 </resources>
