--- a/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values-en/strings.xml
@@ -143,5 +143,6 @@
     <string name="module_mine_nh_asset_sale_valid_time_max">Max </string>
     <string name="order_manage_text">Orders</string>
     <string name="module_mine_reset_password_success">Success</string>
+    <string name="module_mine_node_switching">Switching</string>
 
 </resources>
