--- a/BCX_Wallet/module_mine/src/main/res/values/strings.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/strings.xml
@@ -142,5 +142,6 @@
     <string name="module_mine_nh_asset_sale_valid_time_max">最大 </string>
     <string name="order_manage_text">订单管理</string>
     <string name="module_mine_reset_password_success">重置成功</string>
+    <string name="module_mine_node_switching">正在切换</string>
 
 </resources>
