feat (library_base)  add Invoke Login page

--- a/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
@@ -30,4 +30,5 @@
     <string name="operate_failed">operate failed</string>
     <string name="secret_free_tip">No More Input Before Exit DApp</string>
     <string name="not_upgrade_text">Not Updated</string>
+    <string name="warm_prompt">温馨提示：</string>
 </resources>
