--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -21,9 +21,9 @@
     <string name="module_mine_node_connect_success">切换成功</string>
     <string name="module_mine_net_test_text">测试网</string>
     <string name="module_mine_net_main_text">主网</string>
-    <string name="module_asset_fragment_asset_login_text">立即登陆/创建账户</string>
+    <string name="module_asset_fragment_asset_login_text">立即登录/创建账户</string>
     <string name="node_data_load_failed">节点信息加载失败</string>
-    <string name="module_asset_try_after_login">请登陆/注册后再试</string>
+    <string name="module_asset_try_after_login">请登录/注册后再试</string>
     <string name="module_asset_operate_fee_not_much">余额不足！</string>
     <string name="module_login_account_creation_required">创建账户需符合要求</string>
     <string name="module_login_creating_free_account_required">账户需满足 ·含有数字</string>
@@ -55,4 +55,12 @@
     <string name="module_mine_confirm_password">请再次确认新密码</string>
     <string name="module_mine_reset_failed">重置失败</string>
     <string name="module_login_private_key_no_account_info">该私钥没有对应的账户信息</string>
+    <string name="invoke_login_title">请求登录</string>
+    <string name="invoked_login_account">授权账号：</string>
+    <string name="invoke_login_switch">切换</string>
+    <string name="request_login_desc">请求执行操作：</string>
+    <string name="invoke_login_action">登录</string>
+    <string name="invoke_login_prompt">登陆操作仅进行身份确认，此操作不会传输私钥</string>
+    <string name="invoke_login_confirm">确认登录</string>
+    <string name="invoke_login_cancel">取消</string>
 </resources>
