--- a/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
@@ -9,7 +9,20 @@
     <string name="customactivityoncrash_error_activity_error_details_copy" tools:ignore="MissingTranslation">Copy</string>
     <string name="customactivityoncrash_error_activity_error_details_copied" tools:ignore="MissingTranslation">Copy</string>
     <string name="customactivityoncrash_error_activity_error_details_clipboard_label" tools:ignore="MissingTranslation">Error Info</string>
-
+    <string name="module_asset_transfer_title">Send</string>
+    <string name="module_asset_transfer_deal_detail">Transaction Details</string>
+    <string name="module_asset_transfer_order_info">Order Information</string>
+    <string name="module_asset_transfer_account_name">From</string>
+    <string name="module_asset_receivable_account_name">To</string>
+    <string name="module_asset_transfer_amount_info">Amount</string>
+    <string name="module_asset_transfer_memo_info">Memo</string>
+    <string name="module_asset_transfer_pay_confirm_btn">Confirm Payment</string>
+    <string name="module_asset_receivablesAccountName_empty">Address empty!</string>
+    <string name="module_asset_transfer_amount_empty">Please enter the amount to be transferred</string>
+    <string name="module_asset_transfer_account_can_not_yourself">Transfer account can not be self</string>
+    <string name="module_asset_wrong_password">Wrong password</string>
+    <string name="module_asset_account_not_found">Account does not exist</string>
+    <string name="module_asset_transfer_success">Transfer completed</string>
     <string name="language_cn">中文</string>
     <string name="language_en">English</string>
     <string name="net_work_failed">Network busy,  please check your network connection!</string>
@@ -31,4 +44,6 @@
     <string name="secret_free_tip">No More Input Before Exit DApp</string>
     <string name="not_upgrade_text">Not Updated</string>
     <string name="warm_prompt">温馨提示：</string>
+    <string name="invoke_transfer_title">订单支付</string>
+    <string name="transferAccountName_empty">付款方不能为空</string>
 </resources>
