--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -70,4 +70,8 @@
     <string name="invoke_transfer_Desc">详情</string>
     <string name="invoke_transfer_confirm">确认支付</string>
     <string name="op_expirted">操作已过时</string>
+    <string name="invoke_contract_title">执行合约</string>
+    <string name="invoke_contract_detail">查看详情</string>
+    <string name="invoke_contract_confirm">确认执行</string>
+    <string name="invoke_contract_defalut">合约</string>
 </resources>
