feat (SwitchAccountItemViewModel) delete repeat save of currenct account

--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="module_asset_fragment_asset_login_text">立即登录/创建账户</string>
     <string name="node_data_load_failed">节点信息加载失败</string>
     <string name="module_asset_try_after_login">请登录/注册后再试</string>
-    <string name="module_asset_operate_fee_not_much">余额不足！</string>
+    <string name="module_asset_operate_fee_not_much">手续费不足！</string>
     <string name="module_login_account_creation_required">创建账户需符合要求</string>
     <string name="module_login_creating_free_account_required">账户需满足 ·含有数字</string>
     <string name="module_login_create_no_authority">没有权限</string>
