--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -75,4 +75,8 @@
     <string name="invoke_contract_confirm">确认执行</string>
     <string name="invoke_contract_defalut">合约</string>
     <string name="module_asset_block_head_address">https://www.cocosabc.com/blocks/block/</string>
+    <string name="refresh_text">刷新</string>
+    <string name="copy_url_text">复制URL</string>
+    <string name="share_text">分享</string>
+    <string name="browser_text">浏览器打开</string>
 </resources>
