fix (ContractDetailViewModel)  fix contract detail empty

--- a/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values-en/strings.xml
@@ -55,28 +55,29 @@
     <string name="module_mine_confirm_password">Enter new passcode again</string>
     <string name="module_mine_reset_failed">Reset failed!</string>
     <string name="module_login_private_key_no_account_info">The private key has no account info</string>
-    <string name="invoke_login_title">请求登录</string>
-    <string name="invoked_login_account">授权账号：</string>
-    <string name="invoke_login_switch">切换</string>
-    <string name="request_login_desc">请求执行操作：</string>
-    <string name="invoke_login_action">登录</string>
-    <string name="invoke_login_prompt">登陆操作仅进行身份确认，此操作不会传输私钥</string>
-    <string name="invoke_login_confirm">确认登录</string>
-    <string name="invoke_login_cancel">取消</string>
-    <string name="invoke_transfer_from">付款账号</string>
-    <string name="invoke_transfer_to">收款账号</string>
-    <string name="invoke_transfer_order_id">订单编号</string>
+    <string name="invoke_login_title">Request Login</string>
+    <string name="invoked_login_account">Authorized account:</string>
+    <string name="invoke_login_switch">Switch</string>
+    <string name="request_login_desc">Request action:</string>
+    <string name="invoke_login_action">login</string>
+    <string name="invoke_login_prompt">The login operation only confirms the identity, this operation does not transmit the private key</string>
+    <string name="invoke_login_confirm">Confirm login</string>
+    <string name="invoke_login_cancel">Cancel</string>
+    <string name="invoke_transfer_from">Payment account</string>
+    <string name="invoke_transfer_to">Deposit Account</string>
+    <string name="invoke_transfer_order_id">Order number</string>
     <string name="invoke_transfer_memo">Memo</string>
-    <string name="invoke_transfer_Desc">详情</string>
-    <string name="invoke_transfer_confirm">确认支付</string>
-    <string name="op_expirted">操作已过时</string>
-    <string name="invoke_contract_title">执行合约</string>
-    <string name="invoke_contract_detail">查看详情</string>
-    <string name="invoke_contract_confirm">确认执行</string>
-    <string name="invoke_contract_defalut">合约</string>
+    <string name="invoke_transfer_Desc">Details:</string>
+    <string name="invoke_transfer_confirm">Confirm payment</string>
+    <string name="op_expirted">Operation time out</string>
+    <string name="invoke_contract_title">Execute contract</string>
+    <string name="invoke_contract_detail">Details ></string>
+    <string name="invoke_contract_confirm">Confirm execution</string>
+    <string name="invoke_contract_defalut">Contract</string>
     <string name="module_asset_block_head_address">https://www.cocosabc.com/blocks/block/</string>
-    <string name="refresh_text">刷新</string>
-    <string name="copy_url_text">复制URL</string>
-    <string name="share_text">分享</string>
-    <string name="browser_text">浏览器打开</string>
+    <string name="refresh_text">Refresh</string>
+    <string name="copy_url_text">Copy URL</string>
+    <string name="share_text">Share</string>
+    <string name="browser_text">Open in browser</string>
+    <string name="contract_detail">Details</string>
 </resources>
