--- a/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
+++ b/BCX_Wallet/library_base/src/main/res/values-en/strings.xml
@@ -43,9 +43,9 @@
     <string name="operate_failed">operate failed</string>
     <string name="secret_free_tip">No More Input Before Exit DApp</string>
     <string name="not_upgrade_text">Not Updated</string>
-    <string name="warm_prompt">温馨提示：</string>
-    <string name="invoke_transfer_title">订单支付</string>
-    <string name="transferAccountName_empty">付款方不能为空</string>
+    <string name="warm_prompt">Tips:</string>
+    <string name="invoke_transfer_title">Order payment</string>
+    <string name="transferAccountName_empty">Payer cannot be empty</string>
     <string name="account_empty">Please log in or create an account first</string>
     <string name="author_account_not_exist">Authorized account doesn‘t exist, please re-authorize</string>
 </resources>
