--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -67,11 +67,11 @@
     <string name="invoke_transfer_to">收款账号</string>
     <string name="invoke_transfer_order_id">订单编号</string>
     <string name="invoke_transfer_memo">Memo</string>
-    <string name="invoke_transfer_Desc">详情</string>
+    <string name="invoke_transfer_Desc">详情：</string>
     <string name="invoke_transfer_confirm">确认支付</string>
     <string name="op_expirted">操作已过时</string>
     <string name="invoke_contract_title">执行合约</string>
-    <string name="invoke_contract_detail">查看详情</string>
+    <string name="invoke_contract_detail">查看详情 ></string>
     <string name="invoke_contract_confirm">确认执行</string>
     <string name="invoke_contract_defalut">合约</string>
     <string name="module_asset_block_head_address">https://www.cocosabc.com/blocks/block/</string>
@@ -79,4 +79,5 @@
     <string name="copy_url_text">复制URL</string>
     <string name="share_text">分享</string>
     <string name="browser_text">浏览器打开</string>
+    <string name="contract_detail">合约详情</string>
 </resources>
