--- a/BCX_Wallet/library_res/src/main/res/values/strings.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="share_success">分享成功</string>
     <string name="share_failed">分享失败</string>
     <string name="share_cancel">分享取消了</string>
+    <string name="price_get_error">获取cocos价格失败</string>
 </resources>
